[gd_scene load_steps=5 format=3 uid="uid://dvueja2pjy6t5"]

[ext_resource type="Script" uid="uid://cvf8tj1dm4h42" path="res://scripts/end_popup.gd" id="1_86cuj"]
[ext_resource type="Theme" uid="uid://230ma3pcldq4" path="res://ui/ueTheme.tres" id="1_cuvyu"]
[ext_resource type="Texture2D" uid="uid://dtt67dqvx5b4f" path="res://assets/images/GoalGraphics/circular_goal.png" id="2_lum18"]
[ext_resource type="Texture2D" uid="uid://dkmodlcaq2mdg" path="res://assets/images/QR_Code_Figma.png" id="3_86cuj"]

[node name="EndPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_86cuj")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1500, 900)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cuvyu")
theme_type_variation = &"StartPopup"

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 45

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="BeginText" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 28
text = "Glückwunsch, ihr habt 0 Ziele erreicht!
Es scheint, als wären euch dabei die folgenden Anliegen wichtig gewesen:
"
fit_content = true
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="GoalPreference1" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_lum18")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="GoalPreference2" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_lum18")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer3" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="GoalPreference3" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_lum18")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel3" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
text = "Norderstedt sind diese Anliegen auch wichtig! Wenn ihr erfahren möchtet, wie die Stadt sich bereits mit diesen Themen auseinandersetzt, findet ihr hier weitere Informationen und Anlaufstellen, um weitere Schritte in Richtung eurer Ziele zu unternehmen."
fit_content = true
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 400)
layout_mode = 2
texture = ExtResource("3_86cuj")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel2" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
text = "Wenn ihr jetzt eure Knöpfe drückt, bekommt ihr außerdem noch eine kleine Belohnung als Dankeschön fürs Mitspielen"
fit_content = true
horizontal_alignment = 1
